--- a/ui.css
+++ b/ui.css
@@ -1,23 +1,24 @@
 #theForm {
   position: relative;
-  
 }
 
 #paymentInfo {
   position: absolute;
     left: 0;
 }
+
 #addressInfo {
   position: absolute;
     right: 0;
 }
+
 #cancelButton {
   position: absolute;
     bottom: 0;
 }
-.hps-form-group {
+
+#theForm .hps-form-group:nth-child(2) {
   position: absolute;
   top: 150px;
-    /* margin: auto; */
   left: 200px;
 }
