--- a/ui.css
+++ b/ui.css
@@ -17,7 +17,7 @@
     bottom: 0;
 }
 
-#theForm .hps-form-group:nth-child(2) {
+#theForm > .hps-form-group:nth-child(6) {
   position: absolute;
   top: 150px;
   left: 200px;
