--- a/ui.css
+++ b/ui.css
@@ -16,7 +16,21 @@
   position: absolute;
     bottom: 0;
 }
-
+#theForm > .hps-form-group:nth-child(3) {
+  position: absolute;
+  top: 150px;
+  left: 200px;
+}
+#theForm > .hps-form-group:nth-child(4) {
+  position: absolute;
+  top: 150px;
+  left: 200px;
+}
+#theForm > .hps-form-group:nth-child(5) {
+  position: absolute;
+  top: 150px;
+  left: 200px;
+}
 #theForm > .hps-form-group:nth-child(6) {
   position: absolute;
   top: 150px;
