--- a/ui.css
+++ b/ui.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap');
+
+
+
 #theForm {
   position: relative;
+  font-family: 'Maven Pro';
 }
 
 #paymentInfo {
